# text2markdown

./: .gitignore  LICENSE  README.md  pyproject.toml
src/text2markdown/: __init__.py  async_t2md.py  async_text2markdown.py  t2md.py  text2markdown.py
tests/: test.py
tests/test-in/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
tests/test-out/: test1.md  test2.md  test3.md  test4.md  test5.md  test6.md  test7.md  test8.md  test9.md
